# EtoZheHelper

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/actions/: __init__.py  catalog.py  models.py  policy.py
app/agent/: analyzer.py  assistant.py  findings.py  plans.py  topics.py
app/api/: action_executions.py  action_runs.py  actions.py  chat.py  hosts.py
app/audit/: logger.py
app/execution/: __init__.py  analysis.py  executor.py  models.py  resolver.py  ssh_client.py
app/kb/: loader.py  models.py  search.py  service.py
app/static/: app.css  app.js
app/templates/: base.html  index.html
app/web/: routes.py
knowledge_base/: README.md
knowledge_base/00-ai-safe-protocol/: README.md  sanitization-examples.md
knowledge_base/01-troubleshooting-core/: README.md  command-capture-template.md  incident-template.md
knowledge_base/02-linux/: 00-linux-troubleshooting-method.md  01-port-connectivity.md  02-curl-http-tls.md  03-dns-deep-dive.md  04-systemd-service-debug.md  05-logs-journalctl.md  README.md  (+20 more)
scripts/: dev_run.py  import_kb.py
tests/: conftest.py  test_action_api.py  test_action_execution_timeline.py  test_action_policy.py  test_action_runs_api.py  test_api.py  test_chat_sessions.py  test_config.py  test_execution_analysis.py  test_execution_readiness.py  test_hosts_api.py  test_import_kb.py  test_kb_loader.py  test_kb_search.py  test_output_analyzer.py  test_ssh_executor.py  test_stage16_ui_static.py  test_stage17_sticky_chat_layout.py  test_topic_assistant.py
(+68 files in other folders)
